--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <h3 class="text-center">Want my services?</31>
+          <h3 class="text-center">Looking for a Web Developer? Want my services? Please feel free to reach out to me</31>
         </div>
 
         <div class="row center-div" data-aos="fade-in">
