--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -106,7 +106,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Landing Page for gidiVPNr</h2>
+              <h2>Landing Page for gidiVPN</h2>
               <p>
                 I designed the landing page for a VPN service provider using HTML, CSS and Javascript.
               </p>
