--- a/portfolio-6.html
+++ b/portfolio-6.html
@@ -101,7 +101,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Project URL</strong>: <a href="https://hakeem-pacman-desktop-v1.netlify.app/"target="_blank" >https://blogspace-v1.netlify.app/</a></li>
+                <li><strong>Project URL</strong>: <a href="https://hakeem-pacman-desktop-v1.netlify.app/"target="_blank" >https://hakeem-pacman-desktop-v1.netlify.app/</a></li>
                 <li><strong>View Code</strong>: <a href="https://app.netlify.com/sites/hakeem-pacman-desktop-v1/overview"target="_blank" >https://app.netlify.com/sites/hakeem-pacman-desktop-v1/overview</a></li>
               </ul>
             </div>
