--- a/portfolio-5.html
+++ b/portfolio-5.html
@@ -101,8 +101,8 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Project URL</strong>: <a href="https://blogspace-v1.netlify.app/"target="_blank" >https://blogspace-v1.netlify.app/</a></li>
-                <li><strong>View Code</strong>: <a href="https://minimalist-blog-2021v.netlify.app/index.html"target="_blank" >https://minimalist-blog-2021v.netlify.app/index.html</a></li>
+                <li><strong>Project URL</strong>: <a href="https://minimalist-blog-2021v.netlify.app/index.html"target="_blank" >https://minimalist-blog-2021v.netlify.app/index.html</a></li>
+                <li><strong>View Code</strong>: <a href="https://github.com/Braimah-Hakeem/minimalist-blog"target="_blank" >https://github.com/Braimah-Hakeem/minimalist-blog</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
