--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Hi, Hakeem Braimah here.</h1>
-      <p>I'm a <span class="typed" data-typed-items="Web developer, football and Dog lover"></span></p>
+      <p><span class="typed" data-typed-items="I'm a Web developer, I make amazing experiences"></span></p>
     </div>
   </section><!-- End Hero -->
 
