--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <p>
               I have been a junior web developer for several months now, building and deploying responsive websites, landing pages and games using <strong>HTML</strong>,
-              <strong>CSS<span>(SASS)</span></strong>, and <strong>JavaScript</strong>. I am consistently seeking opportunities, looking to collaborate on projects, and excited to solve problems.
+              <strong>CSS<span>(SASS)</span></strong>, <strong>JavaScript</strong>, and <strong>REACT</strong>. I am consistently seeking opportunities, looking to collaborate on projects, and excited to solve problems.
               I am currently resident in Nigeria, but I am open to relocating or remote jobs.
             </p>
           </div>
