--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </div>
             </div>
             <p>
-              I have been a junior web developer for several months now, building and deploying responsive websites, landing pages and games using <strong>HTML</strong>,
+              I have been a junior web developer for about 18 months now, building and deploying responsive websites, landing pages and games using <strong>HTML</strong>,
               <strong>CSS<span>(SASS)</span></strong>, <strong>JavaScript</strong>, and <strong>REACT</strong>. I am consistently seeking opportunities, looking to collaborate on projects, and excited to solve problems.
               I am currently resident in Nigeria, but I am open to relocating or remote jobs.
             </p>
@@ -199,7 +199,7 @@
               <p><em>Innovative and highly-motivated web developer with 1 year of experience designing and developing websites, landing pages and web games.</em></p>
               <ul>
                 <li>Ikeja, Lagos, NIGERIA</li>
-                <li>+2347080478247</li>
+                <li>+2348070698108</li>
                 <li>dev26x@outlook.com</li>
               </ul>
             </div>
