--- a/index.html
+++ b/index.html
@@ -272,10 +272,20 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/meme-genr3.PNG" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/meme-genr3.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Landing Page (meme generator)"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-01.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Capture.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Capture.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Landing Page 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-1.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
