--- a/portfolio-01.html
+++ b/portfolio-01.html
@@ -110,7 +110,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>A webinar registration page</h2>
+              <h2>A Meme Generator</h2>
               <p>
                 Using REACT, I created a meme generator to showcase my knowledge of state, components and styling.
               </p>
