--- a/portfolio-02.html
+++ b/portfolio-02.html
@@ -84,16 +84,12 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/meme-genr mobile.PNG" alt="">
+                  <img src="assets/img/portfolio/snippy1.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/meme-genr2.PNG" alt="">
+                  <img src="assets/img/portfolio/snippy2.PNG" alt="">
                 </div>
-
-                <div class="swiper-slide">
-                    <img src="assets/img/portfolio/meme-genr3.PNG" alt="">
-                  </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -105,14 +101,14 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Project URL</strong>: <a href="https://meme-genr.netlify.app/" target="_blank">https://meme-genr.netlify.app/</a></li>
-                <li><strong>View Code</strong>: <a href="https://github.com/Braimah-Hakeem/meme-genr"target="_blank" >https://github.com/Braimah-Hakeem/meme-genr</a></li>
+                <li><strong>Project URL</strong>: <a href="https://hakeem-tenzies-game.netlify.app/" target="_blank">https://hakeem-tenzies-game.netlify.app/</a></li>
+                <li><strong>View Code</strong>: <a href="https://github.com/Braimah-Hakeem/tenzies"target="_blank" >https://github.com/Braimah-Hakeem/tenzies</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>A Meme Generator</h2>
+              <h2>Tenzies Game</h2>
               <p>
-                Using REACT, I created a meme generator to showcase my knowledge of state, components and styling.
+                I created a dice game with die-faces that freeze when clicked on. This game showcases my knowledge of REACT, components, styling, props, state and handling effects.
               </p>
             </div>
           </div>
