--- a/index.html
+++ b/index.html
@@ -270,6 +270,16 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/snippy1.PNG" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/snippy2.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Landing Page (meme generator)"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-02.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/meme-genr3.PNG" class="img-fluid" alt="">
