--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -108,7 +108,7 @@
             <div class="portfolio-description">
               <h2>Landing Page for gidiVPN</h2>
               <p>
-                I designed the landing page for a VPN service provider using HTML, CSS and Javascript.
+                I designed the Pc/Desktop version of a landing page for a VPN service provider using HTML, CSS and Javascript.
               </p>
             </div>
           </div>
