--- a/portfolio-6.html
+++ b/portfolio-6.html
@@ -108,7 +108,7 @@
             <div class="portfolio-description">
               <h2>My Pacman V1</h2>
               <p>
-                I created my version of Pacman using Javascript to manipulate the DOM, and HTML and CSS to style and show the layout, pacman and the ghosts.
+                I created my desktop version of Pacman using Javascript to manipulate the DOM, and HTML and CSS to style and show the layout, pacman and the ghosts.
               </p> 
             </div>
           </div>
